--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/seedow/nodeRaspiCar/issues"
   },
-  "homepage": "https://github.com/seedow/nodeRaspiCar"
+  "homepage": "https://github.com/seedow/nodeRaspiCar",
+  "dependencies": {
+    "socket.io": "~0.9.16"
+  }
 }
